--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+body {
+  background-image: url("https://i.pinimg.com/736x/56/e0/9e/56e09ec851fe0b421a68dd9946c2d5f5.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
