--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,11 @@
   color: #888;
 }
 
-body {
-  /* background-image: url("https://i.pinimg.com/736x/56/e0/9e/56e09ec851fe0b421a68dd9946c2d5f5.jpg");
+/* body {
+  background-image: url("https://i.pinimg.com/736x/a6/7e/9d/a67e9d328fd00f203e69c04d6915140a.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat; */
-  background-color: rgb(145, 168, 146);
-}
+  /* background-color: rgb(6, 6, 4); */
+
+ 
